Fixed image align

--- a/style.css
+++ b/style.css
@@ -1,136 +1,108 @@
 body {
-  background: #f9e933;
-  font-family: 'Droid Sans', sans-serif;
-}
-
-header, main, footer {
-  min-width: 855px;
-}
-
-header .container, main .container, footer .container {
-  max-width: 855px;
-  margin: auto;
-}
-
-header {
-  padding: 25px 0 25px 0;
-  background: white;
-  overflow: auto;
-  border-bottom: 1px solid #ddd;
-}
-
-/* MAIN LOGO */
-h1 {
-  font-family: 'Ubuntu', sans-serif;
-  font-style: italic;
-  font-size: 3em;
-  color: #b33;
-  float: left;
-  width: 570px;
-}
-
-/* FOOTER HEADINGS */
-h5 {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 1.25em;
-    margin-bottom: 20px;
-}
-
-header nav {
-  float: right;
-  width: 285px;
+	background: #f9e933;
+	font-family: 'Droid Sans', sans-serif;
+	font-size: 100%;
 }
 
 a {
-  color: #f00;
-  text-decoration: none;
-  font-weight: bold;
+	font-family: 'Droid-Sans', sans-serif;
+	font-size: smaller;
+	font-weight: bold;
+	color: red;
+	text-decoration: none;
+}
+
+
+h1 {
+	float: left;
+	width: 570px;
+	font-family: 'Ubuntu', sans-serif;
+	font-style: italic;
+	font-size: xx-large;
+	color: #b33;
+}
+
+h2 {
+	font-family: 'Ubuntu', sans-serif;
+	font-size: x-large;
+}
+
+h3 {
+	font-family: 'Ubuntu', sans-serif;
+	font-size: medium;
+	margin-bottom: 20px;
+}
+
+h5 {
+	font-family: 'Ubuntu', sans-serif;
+	font-size: large;
+}
+
+p {
+	font-family: 'Droid-Sans', sans-serif;
+	font-size: small;
+	margin-bottom: 20px;
+}
+
+header, main, footer {
+	min-width: 855px;
+}
+
+header .container, main .container, footer .container {
+	max-width: 855px;
+	margin: auto;
+}
+
+header {
+	background: white;
+	overflow: auto;
+	padding: 25px 0 25px 0;
+	border-bottom: 1px solid #ddd;
+}
+
+header nav {
+	float: right;
+	width: 285px;
 }
 
 main {
-    background: #fff;
-    border-radius: 0 5px 5px 5px;;
-    padding: 40px;
+	background: white;
+	overflow: auto;
+	border-radius: 0 5px 5px 5px;
+	padding: 40px;
+
 }
 
-.tabs a span {
-    border-radius: 5px 5px 0 0;
-    display: inline-block;
-    width: 100px;
-    margin-right: 10px;
-    text-align: center;
-    background: #ddd;
-    padding: 5px;
+main .left {
+	float: left;
+	width: 570px;
 }
 
-.tabs a .active {
-    background: #eee;
-}
-
-main .content {
-    padding: 30px 10px 30px 10px;
-    border-radius: 0 5px 5px 5px;
-    background: #eee;
-}
-
-main .content li {
-    border-radius: 5px;
-    padding: 3px;
-    background: #eff;
-    margin: 0 0 10px 0;
-}
-
-main .content button {
-  font-weight: bold;
-  padding: 0 3px 0 3px;
-  border-radius: 5px;
-  background: #ccc;
-  cursor: pointer;
-  margin-left: 5px;
-  font-size: 1.3em;
+main .right {
+	float: right;
+	width: 285px;
 }
 
 
-main .content p {
-    background: yellow;
-}
-
-main .content input {
-    font-size: 1.5em;
-}
-
-footer {
-    border-top: 1px solid #ddd;
-    padding: 40px 0 20px 0;
-}
-
-footer .contact {
-  float: left;
-  width: 570px;    
-}
-
-footer .contact p:nth-child(2) {
-  color: #b33;
-  font-style: italic;
+footer .left {
+	float: left;
+	width: 570px;
 }
 
 footer .sitemap {
-    float: right;
-    width: 285px;
+	float: right;
+	width: 285px;
 }
 
-footer ul {
-    width: 230px;
+.question {
+	color: green;
+	font-size: larger;
+	line-height: 35px;
+
 }
 
-li {
-    list-style: none;
+.answer {
+	line-height: 20px;
+	color: blue;
 }
 
-footer .sitemap .left {
-    float: left;
-}
-
-footer .sitemap .right {
-    float: right;
-}
